# PromptPlay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mvp.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
apps/backend/src/: index.ts
apps/backend/src/db/: index.ts  init.ts  schema.ts
apps/backend/src/middleware/: auth.ts
apps/backend/src/routes/: assets.ts  games.ts
apps/backend/src/services/: collaboration.ts
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai_client.rs  commands.rs  file_watcher.rs  lib.rs  main.rs  watcher_commands.rs
apps/desktop/src/components/: AIPlaytestPanel.tsx  AIPromptPanel.tsx  AIToolsPanel.tsx  AnimationEditor.tsx  AnimationTimeline.tsx  Icons.tsx  (+54 more)
apps/desktop/tests/: e2e.test.ts  gameSpec.test.ts  nodeExecutor.test.ts  projectOperations.test.ts  setup.ts
apps/editor/: .env.local.example  next.config.js  package.json
demos/coin-rush/: game.json
demos/coin-rush/.promptplay/: chat-history.json
demos/coin-rush/scripts/: behavior.json  nodes.json  states.json
demos/maze-runner/: game.json
docs/: ROADMAP.md  api-reference.md  architecture.md  prd.md  tasks.md  testing-guide.md  testing-plan.md  user-guide.md
scripts/: run-tests.sh
(+131 files in other folders)
