[package]
name = "promptplay-desktop"
version = "0.1.0"
description = "PromptPlay - AI-First 2D Game Engine"
authors = ["PromptPlay Team"]
edition = "2021"

[lib]
name = "promptplay_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "promptplay-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
